[gd_scene load_steps=2 format=3 uid="uid://cksr53184nn1l"]

[ext_resource type="Script" path="res://scenes/main/main-menu.gd" id="1_eybd6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_eybd6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 93.0
grow_vertical = 0

[node name="BtnNewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnQuitGame")
focus_neighbor_bottom = NodePath("../BtnOptions")
focus_next = NodePath("../BtnOptions")
focus_previous = NodePath("../BtnQuitGame")
text = "New Game"

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnNewGame")
focus_neighbor_bottom = NodePath("../BtnCredits")
focus_next = NodePath("../BtnCredits")
focus_previous = NodePath("../BtnNewGame")
text = "Options"

[node name="BtnCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnOptions")
focus_neighbor_bottom = NodePath("../BtnQuitGame")
focus_next = NodePath("../BtnQuitGame")
focus_previous = NodePath("../BtnOptions")
text = "Credit"

[node name="BtnQuitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnCredits")
focus_neighbor_bottom = NodePath("../BtnNewGame")
focus_next = NodePath("../BtnNewGame")
focus_previous = NodePath("../BtnCredits")
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnCredits" to="." method="_on_btn_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuitGame" to="." method="_on_btn_quit_game_pressed"]
